--- a/client/src/app/views/register.html
+++ b/client/src/app/views/register.html
@@ -34,7 +34,7 @@
             <div class="input-group-btn">
               <span class="fileUpload btn">
                 <span class="upl" id="upload">Buscar</span>
-                <input type="file" class="upload up" id="up" (change)="fileChangeEvent($event)" accept="image/*" />
+                <input type="file" class="upload up" id="up" (change)="fileChangeEvent($event)" accept="image/*" required/>
               </span>
             </div>
           </div>
